--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		-ms-filter: blur(4px);
 	}
 	#authors{
-		width: 1900px;
+		width: 100%;
 		height: 600px;
 		align: center;
 		margin-left: auto;
@@ -173,6 +173,7 @@
 		vertical-align:top;
 		margin: auto 100px auto auto;
 		z-index: -1;
+		text-align: center;
 	}
 	#speech{
 		position: absolute;
