--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 		-ms-filter: blur(4px);
 	}
 	#authors{
-		width: 70%;
+		width: 100%;
 		height: 600px;
 		align: center;
 		margin-left: auto;
@@ -290,13 +290,15 @@
 					document.getElementById('ep').style.zIndex= -2;
 				}
 				if(id == 'e'){
-					document.getElementById('authors').style.width= " 70%";
+					document.getElementById('authors').style.width= " 60%";
+					document.getElementById('authors').style.marginLeft= "0px";
 				}
 			}
 			function hideStuff(id) {
 				document.getElementById(id).style.display = 'none';
 				document.getElementById(id+'d').style.textAlign = ' center';
 				document.getElementById('authors').style.width= " 100%";
+				document.getElementById('authors').style.marginLeft= "auto";
 				if(id !='k'){
 					document.getElementById('kp').className= " face";
 				}
